[package]
name = "river"
version = "0.0.3"
authors = ["morning"]
edition = "2021"
description = "High Performance Data Transfer Tool."
homepage = "https://github.com/cc-morning/river"
repository = "https://github.com/cc-morning/river"

[dependencies]
aho-corasick = { version = "0.7", features = [ "std" ], default-features = false }
anyhow = { version = "1", features = [ "std" ], default-features = false }
async-stream = { version = "0.3", default-features = false }
bytes = { version = "1", features = [ "std" ], default-features = false }
clap = { version = "3", features = [ "std", "derive" ], default-features = false }
chrono = { version = "0.4", default-features = false }
csv-async = { version = "1", features = [ "tokio" ], default-features = false }
elasticsearch = { git = "https://github.com/cc-morning/elasticsearch-rs.git", branch = "7.15", features = [ "native-tls" ], default-features = false }
env_logger = { version = "0.9", features = [ "humantime" ], default-features = false }
flume = { version = "0.10", features = [ "async" ], default-features = false }
futures = { version = "0.3", default-features = false }
log = { version = "0.4", default-features = false }
mlua = { version = "0.7", features = [ "luajit", "luajit52", "vendored", "async" ], default-features = false }
mysql_async = { version = "0.29", features = [ "default" ], default-features = false }
r2d2 = { version = "0.8", default-features = false }
r2d2-oracle = { version = "0.5", features = [ "chrono" ], default-features = false }
serde = { version = "1", features = [ "std", "derive" ], default-features = false }
serde_json = { version = "1", features = [ "std" ], default-features = false }
serde_with = { version = "1", features = [ "macros", "json" ], default-features = false }
simdutf8 = { version = "0.1", default-features = false }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ], default-features = false }
tokio-postgres = { version = "0.7", features = [ "runtime", "with-uuid-0_8", "with-serde_json-1", "with-chrono-0_4" ], default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", features = [ "io" ], default-features = false }
toml = { version = "0.5", features = [ "preserve_order" ], default-features = false }
url = { version = "2", default-features = false }
uuid = { version = "0.8", default-features = false }
walkdir = { version = "2", default-features = false }

[target.'cfg(windows)'.dependencies]
snmalloc-rs = { version = "0.2", features = [ "1mib", "native-cpu", "build_cc", "usecxx20", "win8compat" ], default-features = false }
[target.'cfg(any(target_os = "unix", target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
simd-json = { version = "0.4", features = [ "serde_impl", "allow-non-simd" ], default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
